--- a/day_6/面经基础版/interview_experience/package.json
+++ b/day_6/面经基础版/interview_experience/package.json
@@ -17,8 +17,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "axios": "^1.6.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
